refactor: 테스트 테이터 삽입 쿼리를 배치 쿼리로 변경 (#297)